# uclv-rh8d-task

./: CMakeLists.txt  README.md  package.xml
config/: ball_config.yaml  bottle_config.yaml  common_config.yaml  sponge_config.yaml
launch/: launch.py
src/: task_node.cpp  task_node2.cpp  task_node3.cpp  task_node4.cpp  task_node5.cpp
